fix navbar collapse and add navbar icons links

--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -7,3 +7,7 @@ a {
 nav {
   border-bottom-color: $borderColor !important;
 }
+
+.navbar-toggler:focus {
+  box-shadow: none !important;
+}
